# TicTacToe

./: CMakeLists.txt
inc/: Gra.h  Scena.h
src/: Gra.cpp  Scena.cpp  main.cpp
